Added a lot of windows, functionalities and a backend for ActivityWatch

--- a/src/GraphicalUI/config_en.yaml
+++ b/src/GraphicalUI/config_en.yaml
@@ -1,5 +1,5 @@
 language: English
-logo_path: "images/logo.png"
+logo_path: "src/GraphicalUI/images/logo.png"
 
 
 ##########################################################
